--- a/packages/ui/docs/icloud/package.json
+++ b/packages/ui/docs/icloud/package.json
@@ -32,6 +32,59 @@
         "@emotion/styled": "^11.8.1",
         "@huse/boolean": "^1.1.2",
         "@huse/input-value": "^1.1.1",
+        "@reskript/cli": "^3.0.6",
+        "@reskript/cli-lint": "^3.0.6",
+        "@reskript/config-babel": "^3.0.6",
+        "@reskript/config-lint": "^3.0.6",
+        "@reskript/config-webpack": "^3.0.6",
+        "@storybook/addon-a11y": "6.5.9",
+        "@storybook/addon-docs": "6.5.9",
+        "@storybook/addon-storysource": "6.5.9",
+        "@storybook/addon-viewport": "6.5.9",
+        "@storybook/addons": "6.5.9",
+        "@storybook/builder-webpack5": "6.5.9",
+        "@storybook/client-api": "6.5.9",
+        "@storybook/manager-webpack5": "6.5.9",
+        "@storybook/react": "6.5.9",
+        "@types/enzyme": "^3.10.12",
+        "@types/jest": "^27.5.2",
+        "@types/react-dom": "^17.0.17",
+        "@types/react-test-renderer": "^17.0.2",
+        "antd": "^5.3.0",
+        "babel-loader": "^8.2.5",
+        "babel-merge": "^3.0.0",
+        "cpy-cli": "^3.1.1",
+        "enzyme": "^3.11.0",
+        "eslint": "^8.23.0",
+        "huse": "^2.0.3",
+        "husky": "^4.3.8",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^27.5.1",
+        "prop-types": "^15.8.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-is": "^17.0.2",
+        "react-omni-link": "^2.1.1",
+        "react-router-dom": "^5.3.3",
+        "react-test-renderer": "^17.0.2",
+        "storybook-dark-mode": "^1.1.0",
+        "ts-jest": "^27.1.5",
+        "typescript": "^4.8.2",
+        "webpack": "^5.74.0"
+    },
+    "peerDependencies": {
+        "antd": ">=4.21.3",
+        "react": ">=17.0.2",
+        "react-dom": ">=17.0.2"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://gitee.com/gitee-fe/osui/tree/master"
+    },
+    "author": "huoyuxuan",
+    "license": "MIT",
+    "dependencies": {
+        "classnames": "^2.3.1",
         "@osui/affix": "workspace:^2.1.9",
         "@osui/alert": "workspace:^2.1.9",
         "@osui/anchor": "workspace:^2.1.9",
@@ -107,59 +160,6 @@
         "@osui/tree-select": "workspace:^2.1.9",
         "@osui/typography": "workspace:^2.1.9",
         "@osui/upload": "workspace:^2.1.9",
-        "@osui/version": "workspace:^2.1.9",
-        "@reskript/cli": "^3.0.6",
-        "@reskript/cli-lint": "^3.0.6",
-        "@reskript/config-babel": "^3.0.6",
-        "@reskript/config-lint": "^3.0.6",
-        "@reskript/config-webpack": "^3.0.6",
-        "@storybook/addon-a11y": "6.5.9",
-        "@storybook/addon-docs": "6.5.9",
-        "@storybook/addon-storysource": "6.5.9",
-        "@storybook/addon-viewport": "6.5.9",
-        "@storybook/addons": "6.5.9",
-        "@storybook/builder-webpack5": "6.5.9",
-        "@storybook/client-api": "6.5.9",
-        "@storybook/manager-webpack5": "6.5.9",
-        "@storybook/react": "6.5.9",
-        "@types/enzyme": "^3.10.12",
-        "@types/jest": "^27.5.2",
-        "@types/react-dom": "^17.0.17",
-        "@types/react-test-renderer": "^17.0.2",
-        "antd": "^5.3.0",
-        "babel-loader": "^8.2.5",
-        "babel-merge": "^3.0.0",
-        "cpy-cli": "^3.1.1",
-        "enzyme": "^3.11.0",
-        "eslint": "^8.23.0",
-        "huse": "^2.0.3",
-        "husky": "^4.3.8",
-        "identity-obj-proxy": "^3.0.0",
-        "jest": "^27.5.1",
-        "prop-types": "^15.8.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-is": "^17.0.2",
-        "react-omni-link": "^2.1.1",
-        "react-router-dom": "^5.3.3",
-        "react-test-renderer": "^17.0.2",
-        "storybook-dark-mode": "^1.1.0",
-        "ts-jest": "^27.1.5",
-        "typescript": "^4.8.2",
-        "webpack": "^5.74.0"
-    },
-    "peerDependencies": {
-        "antd": ">=4.21.3",
-        "react": ">=17.0.2",
-        "react-dom": ">=17.0.2"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://gitee.com/gitee-fe/osui/tree/master"
-    },
-    "author": "huoyuxuan",
-    "license": "MIT",
-    "dependencies": {
-        "classnames": "^2.3.1"
+        "@osui/version": "workspace:^2.1.9"
     }
 }
