--- a/packages/ui/alert/package.json
+++ b/packages/ui/alert/package.json
@@ -69,7 +69,8 @@
         "stylelint": "^14.0.0",
         "ts-jest": "^27.0.3",
         "typescript": "^4.4.3",
-        "webpack": "^5.52.1"
+        "webpack": "^5.52.1",
+        "@types/hoist-non-react-statics": "^3.3.1"
     },
     "peerDependencies": {
         "@osui/icons": "^2.0.0",
@@ -86,7 +87,6 @@
     "dependencies": {
         "@huse/boolean": "^1.1.2",
         "@huse/timeout": "^1.1.1",
-        "@types/hoist-non-react-statics": "^3.3.1",
         "classnames": "^2.3.1",
         "hoist-non-react-statics": "^3.3.2"
     },
