--- a/packages/ui/auto-complete/package.json
+++ b/packages/ui/auto-complete/package.json
@@ -70,7 +70,8 @@
         "stylelint": "^14.0.0",
         "ts-jest": "^27.0.3",
         "typescript": "^4.4.3",
-        "webpack": "^5.52.1"
+        "webpack": "^5.52.1",
+        "@types/hoist-non-react-statics": "^3.3.1"
     },
     "peerDependencies": {
         "@osui/icons": "^2.1.0",
