--- a/packages/ui/calendar/package.json
+++ b/packages/ui/calendar/package.json
@@ -68,7 +68,8 @@
         "stylelint": "^14.0.0",
         "ts-jest": "^27.0.3",
         "typescript": "^4.4.3",
-        "webpack": "^5.52.1"
+        "webpack": "^5.52.1",
+        "@types/hoist-non-react-statics": "^3.3.1"
     },
     "peerDependencies": {
         "antd": ">=4.21.3",
