--- a/packages/ui/menu/package.json
+++ b/packages/ui/menu/package.json
@@ -45,6 +45,7 @@
         "@storybook/manager-webpack5": "6.5.9",
         "@storybook/react": "6.5.9",
         "@types/enzyme": "^3.10.9",
+        "@types/hoist-non-react-statics": "^3.3.1",
         "@types/jest": "^27.0.0",
         "@types/react-dom": "^17.0.2",
         "@types/react-test-renderer": "^17.0.1",
