--- a/packages/ui/select/package.json
+++ b/packages/ui/select/package.json
@@ -76,7 +76,8 @@
         "@osui/icons": "^2.1.0",
         "antd": ">=4.21.3",
         "react": ">=17.0.0",
-        "react-dom": ">=17.0.0"
+        "react-dom": ">=17.0.0",
+        "@types/hoist-non-react-statics": "^3.3.1"
     },
     "dependencies": {
         "@huse/derived-state": "^1.1.1",
