--- a/packages/ui/upload/package.json
+++ b/packages/ui/upload/package.json
@@ -76,7 +76,8 @@
         "ts-jest": "^27.0.3",
         "typescript": "^4.4.3",
         "webpack": "^5.52.1",
-        "xhr-mock": "^2.5.1"
+        "xhr-mock": "^2.5.1",
+        "@types/hoist-non-react-statics": "^3.3.1"
     },
     "peerDependencies": {
         "antd": ">=4.21.3",
