--- a/demo/package.json
+++ b/demo/package.json
@@ -46,7 +46,6 @@
         "@types/jest": "^27.5.2",
         "@types/react-dom": "^17.0.17",
         "@types/react-test-renderer": "^17.0.2",
-        "antd": "^5.3.0",
         "babel-loader": "^8.2.5",
         "babel-merge": "^3.0.0",
         "cpy-cli": "^3.1.1",
@@ -73,9 +72,6 @@
     "author": "huoyuxuan",
     "license": "MIT",
     "dependencies": {
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "classnames": "^2.3.1",
         "@osui/affix": "^2.1.9",
         "@osui/alert": "^2.1.9",
         "@osui/anchor": "^2.1.9",
@@ -151,6 +147,10 @@
         "@osui/tree-select": "^2.1.9",
         "@osui/typography": "^2.1.9",
         "@osui/upload": "^2.1.9",
-        "@osui/version": "^2.1.9"
+        "@osui/version": "^2.1.9",
+        "antd": "^5.3.0",
+        "classnames": "^2.3.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
     }
 }
