--- a/packages/ui/brand-provider/package.json
+++ b/packages/ui/brand-provider/package.json
@@ -15,6 +15,7 @@
     "scripts": {
         "lint": "skr lint",
         "build": "sh scripts/build.sh",
+        "watch": "swc src -d es --watch --source-maps",
         "prepublishOnly": "pnpm run build",
         "storybook": "start-storybook -p 8700",
         "clean": "rm -rf node_modules && rm -rf es",
@@ -46,6 +47,8 @@
         "@storybook/client-api": "6.5.9",
         "@storybook/manager-webpack5": "6.5.9",
         "@storybook/react": "6.5.9",
+        "@swc/cli": "^0.1.62",
+        "@swc/core": "^1.3.40",
         "@types/enzyme": "^3.10.9",
         "@types/jest": "^27.0.0",
         "@types/react-dom": "^17.0.2",
@@ -53,6 +56,7 @@
         "antd": "^5.3.0",
         "babel-loader": "^8.1.0",
         "babel-merge": "^3.0.0",
+        "chokidar": "^3.5.3",
         "cpy-cli": "^3.1.1",
         "enzyme": "^3.11.0",
         "eslint": "^8.0.0",
