--- a/packages/ui/brand-provider/tsconfig.json
+++ b/packages/ui/brand-provider/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "../../../tsconfig.json",
     "compilerOptions": {
         "rootDir": "./src",
+        "emitDeclarationOnly": true,
         "outDir": "./tmp"
     },
     "include": ["src"]
