--- a/packages/ui/button/package.json
+++ b/packages/ui/button/package.json
@@ -30,6 +30,7 @@
         "@osui/brand-provider": "^2.1.9",
         "@osui/divider": "^2.1.9",
         "@osui/flex-centered": "^2.1.9",
+        "@osui/gap": "workspace:^2.1.9",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
         "@osui/markdown": "^2.1.9",
@@ -48,6 +49,8 @@
         "@storybook/client-api": "6.5.9",
         "@storybook/manager-webpack5": "6.5.9",
         "@storybook/react": "6.5.9",
+        "@swc/cli": "^0.1.62",
+        "@swc/core": "^1.3.40",
         "@types/enzyme": "^3.10.9",
         "@types/jest": "^27.0.0",
         "@types/react-dom": "^17.0.2",
@@ -55,7 +58,8 @@
         "antd": "^5.3.0",
         "babel-loader": "^8.1.0",
         "babel-merge": "^3.0.0",
-        "cpy-cli": "^3.1.1",
+        "browserslist": "^4.21.5",
+        "core-js": "^3.29.1",
         "enzyme": "^3.11.0",
         "eslint": "^8.0.0",
         "husky": "^4.2.5",
