--- a/packages/ui/button/tsconfig.json
+++ b/packages/ui/button/tsconfig.json
@@ -2,7 +2,9 @@
     "extends": "../../../tsconfig.json",
     "compilerOptions": {
         "rootDir": "./src",
-        "outDir": "./tmp"
+        "outDir": "./tmp",
+        "emitDeclarationOnly": true,
+        "declarationMap": true
     },
     "include": ["src"]
 }
