--- a/lerna.json
+++ b/lerna.json
@@ -8,7 +8,7 @@
     "command": {
         "version": {
             "allowBranch": [
-                "master",
+                "main",
                 "hot-fix",
                 "acud"
             ],
