--- a/packages/ui/menu/package.json
+++ b/packages/ui/menu/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/menu",
-    "version": "2.1.9",
+    "version": "2.1.10",
     "description": "",
     "main": "lib/index.js",
     "module": "es/index.js",
@@ -45,7 +45,9 @@
         "@storybook/manager-webpack5": "6.5.9",
         "@storybook/react": "6.5.9",
         "@types/enzyme": "^3.10.9",
+        "@types/hoist-non-react-statics": "^3.3.1",
         "@types/jest": "^27.0.0",
+        "@types/react": "17.0.53",
         "@types/react-dom": "^17.0.2",
         "@types/react-test-renderer": "^17.0.1",
         "antd": "^4.21.3",
@@ -89,5 +91,8 @@
         "classnames": "^2.3.1",
         "hoist-non-react-statics": "^3.3.2"
     },
-    "packageManager": "pnpm@7.14.2"
+    "packageManager": "pnpm@7.14.2",
+    "resolutions": {
+        "@types/react": "^17.0.53"
+    }
 }
