--- a/packages/ui/input/package.json
+++ b/packages/ui/input/package.json
@@ -58,6 +58,7 @@
         "@types/enzyme": "^3.10.9",
         "@types/hoist-non-react-statics": "^3.3.1",
         "@types/jest": "^27.0.0",
+        "@types/lodash": "^4.14.192",
         "@types/react-dom": "^17.0.2",
         "@types/react-test-renderer": "^17.0.1",
         "antd": "^5.3.0",
