--- a/demo/package.json
+++ b/demo/package.json
@@ -39,6 +39,7 @@
         "@storybook/addon-viewport": "6.5.9",
         "@storybook/addons": "6.5.9",
         "@storybook/builder-webpack5": "6.5.9",
+        "@storybook/cli": "^6.5.10",
         "@storybook/client-api": "6.5.9",
         "@storybook/manager-webpack5": "6.5.9",
         "@storybook/react": "6.5.9",
