--- a/packages/ui/table/package.json
+++ b/packages/ui/table/package.json
@@ -26,6 +26,7 @@
         "es/*.less"
     ],
     "devDependencies": {
+        "@ant-design/icons": "^4.7.0",
         "@babel/cli": "^7.10.5",
         "@osui/brand-provider": "^3.0.0",
         "@osui/form": "^3.0.0",
@@ -81,7 +82,8 @@
         "@osui/icons": "^2.1.0",
         "antd": ">=4.21.3",
         "react": ">=17.0.0",
-        "react-dom": ">=17.0.0"
+        "react-dom": ">=17.0.0",
+        "@ant-design/icons": "^4.7.0"
     },
     "repository": {
         "type": "git",
