--- a/packages/ui-icons/icons-builder/package.json
+++ b/packages/ui-icons/icons-builder/package.json
@@ -20,7 +20,7 @@
   "author": "Justineo <justice360@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@osui/icons": "^3.0.0",
+    "@osui/icons": "3.0.0-alpha.0",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.40",
     "eslint": "^8.0.0",
